fix overlapping divs and wrapping and margins

--- a/style/sass/main.sass
+++ b/style/sass/main.sass
@@ -1,6 +1,8 @@
 body
 	background-color: #eee
-	margin: 30px 300px 0px
+	max-width: 730px
+	min-width: 630px
+	margin: 30px auto 0px
 	.header
 		text-align: center
 		margin-bottom: 40px
@@ -17,13 +19,14 @@ body
 			list-style: none
 			font-size: 24px
 			color: grey
-			i
-				display: inline-block
-				width: 24px
-				margin-right: 15px
-				color: black
-			a
-				text-decoration: none
-				color: grey
 			li
 				margin: 10px 0px
+				white-space: nowrap
+				i
+					display: inline-block
+					width: 24px
+					margin-right: 15px
+					color: black
+				a
+					text-decoration: none
+					color: grey
